# XIM

./: .gitmodules  CMakeLists.txt  README  README.md  main.cpp
context/: message.h
widgets/: chattextbrowser.cpp  chattextbrowser.h  chattexteditor.cpp  chattexteditor.h  chattexteditortool.cpp  chattexteditortool.h  mainwgt.cpp  mainwgt.h
